# skills-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/skillscan/: __init__.py  __main__.py  allowlist.py  cli.py  collusion.py  dashboard.py  models.py  store.py
src/skillscan/alerts/: __init__.py  opsgenie.py  pagerduty.py  slack.py  teams.py
src/skillscan/discover/: __init__.py  claude.py  mcp.py
src/skillscan/fleet/: __init__.py  agent.py  poster.py
src/skillscan/marketplace/: __init__.py  reputation.py
src/skillscan/parse/: __init__.py  skill_md.py
src/skillscan/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
src/skillscan/rules/: __init__.py  capability.py  deep_scan.py  deep_scan_js.py  drift.py  frontmatter.py  hidden.py  mcp.py  nl_judge.py  secrets.py  static.py
src/skillscan/siem/: __init__.py  elastic.py  sentinel.py  splunk.py
src/skillscan/visualizer/: __init__.py  interactive_graph.py  mcp_graph.py  timeline.py  trend_chart.py
tests/: test_capability_drift_judge.py  test_deep_collusion.py  test_rules.py  test_s4.py  test_s5.py  test_s6.py  test_s7.py  test_smoke.py
